--- a/css/customer_detail.css
+++ b/css/customer_detail.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Montserrat;
+    src: url("./Montserrat-Regular.ttf");
+}
+
 #customer_detail .modalMainContent {
     display: flex;
     justify-content: space-around;
