--- a/css/view_customers.css
+++ b/css/view_customers.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Montserrat;
+    src: url("./Montserrat-Regular.ttf");
+}
+
 .inputClass {
     display: flex;
     justify-content: flex-end;
