--- a/css/index.css
+++ b/css/index.css
@@ -12,8 +12,7 @@
 nav#largeNav {
     display: flex;
     justify-content: space-between;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 20px;
 }
 
 nav#largeNav #brand-logo {
