--- a/css/index.css
+++ b/css/index.css
@@ -263,4 +263,8 @@ section.topContent .topContentImg {
     .card {
         margin-top: 40px;
     }
+
+    .modal-content {
+        width: 80%!important;
+    }
 }
