--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,6 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     padding: 0;
-    margin: 0;
 }
 
 nav#largeNav {
@@ -54,6 +53,9 @@ nav#largeNav .nav-links li {
     padding: 10px;
 }
 
+main {
+    padding-bottom: 50px;
+}
 main section.topContent {
     display: flex;
     align-items: center;
