--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     padding: 0;
+    margin: 0;
 }
 
 nav#largeNav {
@@ -53,9 +54,6 @@ nav#largeNav .nav-links li {
     padding: 10px;
 }
 
-main {
-    padding-bottom: 50px;
-}
 main section.topContent {
     display: flex;
     align-items: center;
